2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/TrackInfoPopup.cs:
      Decrease spacing between time and progress bar.
    
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs:
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
    * src/Libraries/Lastfm/Makefile.am:
    * src/Libraries/Lastfm/Lastfm/LastfmCore.cs: Use LastfmCore as a singleton
      to access Last.fm classes.
    
    * src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Provide support
      for user agent when sending requests to Audioscrobbler servers. Can be
      passed via ctor or by setting the UserAgent property. Also marked ctor
      as internal.
    
    * src/Libraries/Lastfm/Lastfm/RadioConnection.cs: Added UserAgent property.
      Marked ctor as internal.
    
    * src/Libraries/Lastfm/Lastfm/Account.cs: Remove the static Account instance,
      since it's now provided by LastfmCore as a singleton.

2008-02-23  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Banshee.Services/Banshee.Library/ThreadPoolImportSource.cs,
	* src/Core/Banshee.Services/Banshee.PlayerMigration/AmarokPlayerImportSource.cs:
	  Renamed DoImport to ImportCore as per Framework Design Guidelines, also
	  slapped the new keyword onto the static
	  AmarokPlayerImportSource.CanImport property to get rid of the warning
	  about it hiding a base member of the same name (which it should).

2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/X11NotificationAreaBox.cs:
      Get track duration and progress information before showing the popup 
      and relying on the fact that we're playing to determine the progress
      label text. Showing the popup during a paused song now works.
    
    * src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/TrackInfoPopup.cs: