@@ -1,3 +1,12 @@
+2008-02-24  Alexander Hixon  <hixon.alexander@mediati.org>
+    * src/Libraries/Lastfm/Lastfm/RadioConnection.cs:
+    * src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Remove class-
+      based UserAgent properties, values and constructor arguments. Use
+      LastfmCore.UserAgent instead.
+    
+    * src/Libraries/Lastfm/Lastfm/LastfmCore.cs: Simplify UserAgent's setter,
+      and update instance creation to reflect changes in ctor definitions.
+
 2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
     * src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/TrackInfoPopup.cs:
       Decrease spacing between time and progress bar.
